test_regress/t/t_force_bad_rw.out
%Error: Internal Error: t/t_force_bad_rw.v:14:20: ../V3Force.cpp:#: READWRITE reference to forced variable which is not function argument
   14 |       foreach (ass[index]) begin
      |                    ^~~~~
                        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
